--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.15.4"
+    "@babel/runtime-corejs3": "^7.15.4",
+    "stylus": "^0.56.0"
   },
   "scripts": {
     "build": "lerna run build",
