--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mkdirp": "^1.0.4",
     "node-fetch": "^3.0.0",
     "prettier": "^2.0.5",
+    "rimraf": "^5.0.10",
     "stylus-loader": "^6.1.0",
     "svgstore": "*",
     "terser-webpack-plugin": "^5.2.3",
